Fix broken styles

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,9 +21,6 @@
 @import "website/components/product-page-header";
 @import "website/components/product-logo";
 
-*{
-    margin:0;
-
 // Override website components
 
 .page-header {
